[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/croc.png" type="Texture" id=1]
[ext_resource path="res://assets/dog.png" type="Texture" id=2]
[ext_resource path="res://assets/octopus.png" type="Texture" id=3]
[ext_resource path="res://assets/lobster.png" type="Texture" id=4]
[ext_resource path="res://assets/bear.png" type="Texture" id=5]
[ext_resource path="res://assets/crab.png" type="Texture" id=6]
[ext_resource path="res://assets/shield.png" type="Texture" id=7]
[ext_resource path="res://assets/axe.png" type="Texture" id=8]
[ext_resource path="res://assets/uzi.png" type="Texture" id=9]
[ext_resource path="res://assets/scythe.png" type="Texture" id=10]
[ext_resource path="res://script/Pet.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.42493, 6.64251 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Pet" type="KinematicBody2D"]
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimalSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.166855, 0 )
frames = SubResource( 2 )

[node name="Evolution2" type="Node2D" parent="."]
visible = false

[node name="Shield" type="Sprite" parent="Evolution2"]
modulate = Color( 0.6, 0.505882, 0.317647, 1 )
position = Vector2( 9.79888, 2.28361 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 7 )

[node name="Axe" type="Sprite" parent="Evolution2"]
modulate = Color( 0.690196, 0.690196, 0.690196, 1 )
position = Vector2( -12.3975, -2.64455 )
texture = ExtResource( 8 )
flip_h = true

[node name="Evolution3" type="Node2D" parent="."]
visible = false

[node name="Scythe" type="Sprite" parent="Evolution3"]
modulate = Color( 0.698039, 0.0862745, 0.0862745, 1 )
position = Vector2( 11.5032, -3.64226 )
texture = ExtResource( 10 )

[node name="Scythe2" type="Sprite" parent="Evolution3"]
modulate = Color( 0.698039, 0.0862745, 0.0862745, 1 )
position = Vector2( -11.7731, -3.64226 )
texture = ExtResource( 10 )
flip_h = true

[node name="Evolution4" type="Node2D" parent="."]
visible = false

[node name="Uzi" type="Sprite" parent="Evolution4"]
modulate = Color( 0.333333, 0.333333, 0.333333, 1 )
position = Vector2( -10.2845, 4.40973 )
texture = ExtResource( 9 )
flip_h = true

[node name="Uzi2" type="Sprite" parent="Evolution4"]
modulate = Color( 0.333333, 0.333333, 0.333333, 1 )
position = Vector2( 10.5723, 4.40973 )
texture = ExtResource( 9 )
